# WalletProbe

./: .gitignore  pyproject.toml
scanner/: pyproject.toml
scanner/src/auto_fingerprint/: consts.py  main.py  response.py  utils.py  vector_db.py
scanner/test_source_code/electrum/: descriptor.py  electrum_fee_policy.py  electrum_wallet.py  transaction.py
server/: app.py  pyproject.toml
server/templates/: index.html  search-results.html
src/auto_fingerprint/: main.py
test_source_code/electrum/: electrum_coin_chooser.py  manifest.json
