[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Armin Sabouri",email = "armins88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "qdrant-client (>=1.14.2,<2.0.0)",
    "openai (==1.82.1)",
    "numpy (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
